restablecimiento de imagen

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="/images/lupe2.jpeg" alt="Logo de la empresa">
+        <img src="/images/lupe3.png" alt="Logo de la empresa">
     </div>
 
     <div class="button-container">
