--- a/HTML/Historial_de_entradas.html
+++ b/HTML/Historial_de_entradas.html
@@ -6,6 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="/images/lupe1.jpeg" type="image/x-icon">
     <link rel="stylesheet" href="/CSS/style_entradas.css">
     <title>Historial de entradas</title>
 </head>
