--- a/HTML/salarios.html
+++ b/HTML/salarios.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/CSS/style_salarios.css">
-    <link rel="shortcut icon" href="/images/gancho.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/images/lupe1.jpeg" type="image/x-icon">
     <title>Salarios de Esta Semana</title>
 </head>
 <body>
