--- a/index.html
+++ b/index.html
@@ -87,6 +87,10 @@
         <button onclick="cerrarCardContraseñaHistorial()">Cancelar</button>
     </div>
 </div>
+<div id="custom-alert" class="custom-alert">
+    <p>Contraseña Incorrecta</p>
+    <button id="close-alert">Cerrar</button>
+</div>
     <script src="/JS/script.js"></script>
     <script src="/JS/app.js"></script>
 </body>
